# virpn

./: .gitignore  Cargo.toml  README.md  build_wasm.sh  planning.txt
.github/workflows/: actions.yml
src/: data.rs  interface.rs  io.rs  lib.rs  main.rs  modes.rs  op.rs  op_helpers.rs  stack.rs  terminal.rs  wasm_interface.rs
src/modes/: history.rs  line_edit.rs  manager.rs  mod.rs  nil.rs  number.rs  ops.rs  var.rs
src/modes/ops/: func_helpers.rs  func_table.rs  helpers.rs  mod.rs  table.rs
www/: index.html  index.js  package-lock.json  package.json  styles.css  terminal.js  virpn.js  virpn_bg.js
www/virpn/: index.js  package.json
