[package]
name = "virpn"
version = "0.1.0"
authors = ["Nathan Koppel <nathankoppel0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
regex = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pancurses = "0.16"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
lazy_static = "1.4"
